# tiny_moe

./: Makefile  README.md  RESULTS.md  config.py  dataloader.py  eval.py  generate.py  logging_config.py  pyproject.toml  remote_train.sh  run_train_script.sh  tiny_moe.py  train.py  utils.py
datasets/panchatantra-ryder/: panchatantra-ryder-clean.txt
datasets/panchatantra-ryder/processed/: panchatantra_train_0.npy  panchatantra_valid_1.npy
datasets/smol-lm-corpus/: inspect.ipynb  smol-lm-corpus.ipynb
modules/: attn.py  glu.py  moe.py  rope.py
