[project]
name = "tiny-moe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.1"
dependencies = [
    "english-words>=2.0.2",
    "flax>=0.11.1",
    "google-cloud-storage>=3.3.0",
    "orbax>=0.1.9",
    "tiktoken>=0.11.0",
    "transformers>=4.55.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "torch>=2.8.0",
]

cuda = [
    "jax[cuda12]>=0.7.0",
]

metal = [
    "jax>=0.7.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
